# galaxy_image

./: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  README_FR.md
LICENSES/: bmp-LICENSE-MIT.txt  jpeg-decoder-LICENSE-APACHE.txt  jpeg-decoder-LICENSE-MIT.txt  jpeg-encoder-LICENSE-APACHE.txt  jpeg-encoder-LICENSE-MIT.txt  png-LICENSE-APACHE.txt  png-LICENSE-MIT.txt
examples/: exr_test.rs  simple_test.rs
src/: component_type.rs  error.rs  galaxy_image.rs  image.rs  image_format.rs  lib.rs  pixel_format.rs
src/loaders/: bmp_loader.rs  exr_loader.rs  jpeg_loader.rs  mod.rs  png_loader.rs
